Fixed: Post image is not showing fixed.

--- a/template/style.css
+++ b/template/style.css
@@ -1190,10 +1190,6 @@ body.search-results .search-form.empty {
     text-align: center;
     font-size: 0;
 }
-.single-post .post-thumbnail amp-img {
-    display: inline-block;
-    max-width: 100%;
-}
 .single-post .post-title {
     font-size: 20px;
     margin: 0 0 15px;
